[project]
name = "pyinstxtractor"
version = "2025"
description = "PyInstaller Extractor Next"
authors = [{ name = "hackerone" }]
license = "GPL-3.0-only"
readme = "README.md, index.html"
packages = [{ include = "pyinstxtractor.py" }]
dependencies = ["xdis==6.1.3", "pycryptodome==3.17", "httpie==1.5"]
requires-python = "3.8"

[project.scripts]
pyinstxtractor-ng = 'pyinstxtractor:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry"


